--- a/pages/p8/953841.md
+++ b/pages/p8/953841.md
@@ -1,4 +1,4 @@
-### “门前有三树 家兴富三世”是指哪3种树？(组图)
+### 跳出自己的圈圈 从客户身上学习(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p dir="ltr" style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/7-24/p2739352a242212549-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/8-26/p2500982a740078171-ss.jpg"/>
   <br>
-   “门前有三树，家兴富三世”指哪3种树？（图片来源：Adobestock）
+   跳出自己的圈圈，从客户身上学习。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,104 +21,115 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.39.94:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.39.94:10000/videos/blog/jiexi1400.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.39.94:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.39.94:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.39.94:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.39.94:10000/videos/res/TheSpecter/)  
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
- <p dir="ltr">
-  农村
+ <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/俗语" target="_blank">
-    俗语
-   </span>
+   把握每一个成长的机会！勇于踏上向往的道路，活出和别人不一样的可能
   </strong>
-  “门前有三树，家兴富三世”，是古人栽树的美好寓意。屋子前前后后种上
-  <strong>
-   桃树
-  </strong>
-  、杏树、李子树，春暖花开的时候，百花争艳；秋高气爽的季节，硕果累累，有一种生机盎然、蒸蒸日上的幸福感。但是，在古代种树可有讲究的，
-  <strong>
-   银杏
-  </strong>
-  树，
-  <strong>
-   桂花
-  </strong>
-  树，柿子树这三种一定要栽在屋前，是因为有业兴家富的寓意
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
+  在原本的计划中，
   <strong>
-   一、
-   <span href="https://www.secretchina.com/news/gb/tag/银杏" target="_blank">
-    银杏
+   <span href="https://www.secretchina.com/news/gb/tag/绿藤" target="_blank">
+    绿藤
    </span>
-   树
   </strong>
+  的
+  <strong>
+   芽菜
+  </strong>
+  应该在第一年就达到一百个销售据点，但是到2011年底只达到72个，离目标还有一段距离。
  </p>
  <p>
-  银杏树名字中有一个“银”字，讨人喜欢。
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiEmpvF9-TqAhWIF6YKHcPbAPYQmhMwH3oECAwQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E9%2593%25B6%25E6%259D%258F&amp;usg=AOvVaw1FfSYaetJMpKoOULtEIas1">
-   银杏
+  “我们原本觉得，只要种出最好的
+  <span href="https://zh.wikipedia.org/zh-tw/%E8%B1%86%E8%8A%BD">
+   芽菜
   </span>
-  树是财富的象征，所以古代老百姓，都会在屋前屋后栽几棵银杏树。
+  ，别人就会来邀请我们上架，”眼看再这样下去不行，郑涵睿、廖怡雯与许伟哲改变想法，“我们必须更主动一点。”
  </p>
  <p>
-  银杏树被称作为活化石，老百姓喜欢在自己的房前房后栽银杏树，寓意着沉着老练的意思。家门前种三棵到五棵银杏树，告诫子孙后代，做事一定要脚踏实地，培养自己有沉稳和坚强的个性，才能在以后事业发展方面更加顺利。
- </p>
- <p>
-  银杏树是一种长寿树，有健康长寿的意思。家里有老年人，门前栽银杏树，希望老年人也能够长命百岁。同时银杏树又代表着坚韧、永恒、纯洁等不同的寓意，所以家家户户都喜欢种植银杏树。
- </p>
- <p>
-  秋季天气越来越冷，不同品种的树木开始落叶归根。走在门前看见院子里，银杏树落下的金黄色的树叶，就像铺满了黄金的宅院一样，看起来富丽堂皇，所以银杏树也是财富和吉祥的寓意。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人们的生活无非就是财运亨通、平安、长寿，门口种植银杏树，有着多种不同的含义，所以很多老百姓都喜欢种植这种树。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+  大家继续跑市集、百货公司展售会，郑涵睿更透过母亲的人脉，向台湾最具领导性的非基改
   <strong>
-   二、
-   <span href="https://www.secretchina.com/news/gb/tag/桂花" target="_blank">
-    桂花
-   </span>
-   树
+   豆腐
   </strong>
+  商──名丰豆腐老板黄孝诚寻求协助，“我们每个周末早上九点到
+  <span href="https://zh.wikipedia.org/zh-tw/%E8%B1%86%E8%85%90">
+   豆腐
+  </span>
+  工厂，帮忙接待参观的访客，为他们倒豆浆，然后在午餐时介绍绿藤的理念。”
+ </p>
+ <p>
+  回想起这段经历，郑涵睿心中充满感激。透过名丰豆腐，绿藤很快接触到一群重视食材品质与安全性的消费者，他们在购买豆浆的时候，时常也会顺带购买绿藤的活
+  <span href="https://www.secretchina.com/news/gb/tag/芽菜" target="_blank">
+   芽菜
+  </span>
+  ，一次就能为绿藤带来两千至五千元的收入，对于创业起步阶段的绿藤而言，这笔收入就像及时雨一样珍贵。但是黄孝诚对绿藤的影响，不仅是如此。
+ </p>
+ <p>
+  有天早上，许伟哲一如往常的带着绿藤芽菜前往
+  <span href="https://www.secretchina.com/news/gb/tag/豆腐" target="_blank">
+   豆腐
+  </span>
+  工厂，当时他因忙碌而暂时将装着芽菜的篮子放在地上，这个不经意的动作让黄孝诚脸色一沉，直率的问道：“你会将要给父母吃的芽菜放在地上吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这句话，对郑涵睿、廖怡雯与许伟哲带来许多省思，提醒他们重新检视自己的心态。此后，绿藤的农场墙上便贴着两句标语，一句是：“如果你是芽菜，你会希望怎么被对待？”另一句就是“每一盒芽菜，都是种给父母吃的”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  郑涵睿回忆，每次倒完豆浆之后，黄孝诚总是会再额外花时间分享他的为商之道与做人之道，“当时有句话影响我们很深──面对困难，迎上去就对了！”来自前辈的勉励，让郑涵睿、廖怡雯与许伟哲一直到现在仍牢记在心。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  风雨无阻的四处奔忙，不拒绝每一个机会，不论多卖出一盒芽菜、多打一杯精力汤，都是帮助绿藤活下去的希望。这一天，绿藤团队来到了
+  <span href="http://en.wikipedia.org/wiki/Sogo">
+   Sogo
+  </span>
+  百货12楼的展售会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,9 +144,9 @@
   </div>
  </center>
  <p style="text-align: center;">
-  <img alt="桂花在人们的眼中，美丽、娇艳而高贵。" src="https://img3.secretchina.com/pic/2020/7-24/p2739372a535506004-ss.jpg"/>
+  <img alt="图片来源：出自《B型选择绿藤：找不到喜欢的答案，就自己创造》" src="https://img3.secretchina.com/pic/2020/11-26/p2826371a772971895-ss.jpg"/>
   <br>
-   桂花在人们的眼中，美丽、娇艳而高贵。（图片来源：Adobestock）
+   图片来源：出自《B型选择绿藤：找不到喜欢的答案，就自己创造》
   </br>
  </p>
  <center>
@@ -151,11 +162,7 @@
   </div>
  </center>
  <p>
-  “不是人间种，移从月里来”，写出了
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjz2Ozb9-TqAhWTLqYKHTgECS4QmhMwHHoECAMQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%25A1%2582%25E8%258A%25B1&amp;usg=AOvVaw3xW4fVvu9wmggllpvVslyv">
-   桂花
-  </span>
-  的美丽、娇艳和高贵。
+  陈宜珊奋力介绍芽菜，全心投入的热情，让她清秀的脸庞显得格外动人。突然，有位阿姨上前攀谈。可能感动于年轻女孩的认真，阿姨想为她介绍相亲对象。“我本来要拒绝，”陈宜珊笑着说，“但是一听那位阿姨说她和City'super的员工很熟，我马上改口答应。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,7 +177,7 @@
   </div>
  </center>
  <p>
-  “自是庄严等金粟，不将妖艳比红裙。”列出了桂花树的特点，金花点点，随风摇曳，展现出桂花的美艳和典雅。
+  被誉为“贵妇超市”的City'super是香港的顶级超市品牌，自从引进台湾后，吸引许多重视精致生活的消费者。如果能进驻，对绿藤可能是很好的机会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -185,7 +192,7 @@
   </div>
  </center>
  <p>
-  桂花树的“桂”与“贵”同音，有吉祥富贵、多子多福的寓意，所以古人都认为桂花树是代表财富的吉祥树。
+  相亲并没有成功，但是阿姨还是介绍她认识City'super的员工，透过层层转介，陈宜珊联系上公司采购。绿藤的芽菜，因此获得进驻Sogo复兴馆City'super的机会。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,22 +207,7 @@
   </div>
  </center>
  <p>
-  中国人的传统思想，桂花树是超尘脱俗的仙树。老百姓在屋子前面种桂花树，也让普通人家的生活多了一点仙气和贵气。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  古代老百姓家中，种上几株桂花树，既有美好的寓意，还能够净化空气。劳累了一天的人们，坐在桂花树下乘凉或者闲聊，感觉出生命的美好和惬意。
+  不过，前三个月，他们只能拿到一个月一签的合约，只要销售额不如预期，随时就会失去这个得来不易的机会。陈宜珊说，“当时绿藤只是一个很小的新创品牌，虽然采购愿意提供机会，但也坦诚告诉我们，必须先证明自己的销售实力，他才能向公司争取，让绿藤成为固定的供应商。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,8 +226,23 @@
   </ins>
  </center>
  <p>
+  “第一个月的销售非常关键，”廖怡雯发现，绿藤的芽菜品项并不多，若只是放在货架，没有解说，很难吸引消费者的目光，因此白天他们请展售阿姨帮忙，下班后，廖怡雯与陈宜珊就轮流到超市站柜，希望趁晚上七点到九点半打烊前，再多冲刺几盒芽菜。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
   <strong>
-   三、柿子树
+   天助自助者，自助人恒助之
   </strong>
  </p>
  <center>
@@ -251,11 +258,7 @@
   </div>
  </center>
  <p>
-  古代人，家家户户都会在门前种上一棵或几棵
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjz8Yvt9-TqAhXQyosBHQLNDs8QmhMwIHoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%259F%25BF&amp;usg=AOvVaw3Cb2J0H8yEIhehPiV78UyW">
-   柿子
-  </span>
-  树，到了十月份，会在树干上看见各种橙红色的柿子。柿子红彤彤的挂在枝头上，象征着富裕、吉祥。
+  白天上了一天班，晚上下班还要坐公车赶去站柜，这样的日子累不累？“说起来很奇怪，那时候没有想太多，只是很想试试看自己能走到哪里，”回想起这段拚命三郎般的日子，廖怡雯反而充满感恩。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -270,7 +273,7 @@
   </div>
  </center>
  <p>
-  柿子的口感比较好，成熟之后有很多吃法，可以做成果酱或者果脯，也有的人比较喜欢吃柿子饼。这是一种比较普遍的食物，而且非常耐寒。家门口种上两棵柿子树，也有好事成双的意思。
+  站在百货公司的地下室，每天向走过路过的顾客介绍绿藤的理念，这个过程无形中已化为他们的养分。廖怡雯感谢这一段日子的收获：“让我们可以跳出自己创业的小圈圈，不再只是埋头做自己想做的事，而是直接把自己放在消费者面前，从他们身上学习──我们真正要满足的，是谁的需求？要解决什么问题？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -285,7 +288,9 @@
   </div>
  </center>
  <p>
-  老百姓会在过年的时候将狗拴在柿子树旁边，希望自己的家庭越过越好，将来能够有权（犬）有势（柿）。
+  这些努力，终于为绿藤争取到City'super的一年采购合约，为进驻精品超市打下第一场胜利。
+  <br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -300,7 +305,13 @@
   </div>
  </center>
  <p>
-  农村俗语“门前有三树，家兴富三世。”即是一种风水方面的寓意和信赖，也寓意花开富贵、蒸蒸日上、硕果累累，表现出人们对未来生活的希望和憧憬。所以，都会在自家门前种树，无论是银杏树、桂花树还是柿子树，都赋予出人们对未来的期望和祝愿。
+  <strong>
+   本文整理、节录自王维玲《
+   <span href="https://www.books.com.tw/products/0010876470">
+    B型选择 绿藤：找不到喜欢的答案，就自己创造
+   </span>
+   》一书，文章仅代表作者个人立场和观点。由天下文化授权转载，欲阅读完整作品，欢迎参考原书。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,7 +325,7 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:8px;">
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -332,7 +343,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="https://img3.secretchina.com/pic/2020/7-21/p2736951a334373943.jpg" width="300px"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -364,13 +375,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940619.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940619.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/940619.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/24/940619.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/953841.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/953841.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/953841.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/953841.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/940619.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/953841.md' width='0px' height='0px'/>
