--- a/pages/p1/953855.md
+++ b/pages/p1/953855.md
@@ -1,4 +1,4 @@
-### 美总统大选候选人首次同台辩论 激辩武肺疫情时集中提中国(图)
+### 王藏被控煽颠罪起诉后 只能电话会见律师(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,76 +7,77 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="川普 拜登 美國大選" src="https://img3.secretchina.com/pic/2020/9-30/p2786342a217348261-ss.jpg" style="height:337px; width:600px"/>
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+  <img alt="王藏因被控“煽动颠覆国家政权”起诉后，律师张磊近日只能与他以电话会面。" src="https://img3.secretchina.com/pic/2020/5-31/p2701281a44481795-ss.jpg"/>
+  <br>
+   王藏因被控“煽动颠覆国家政权”起诉后，律师张磊近日只能与他以电话会面。（图片来源：网络图片）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  2020年10月1日讯】在距离2020年
+  【看中国2020年11月27日讯】（看中国记者卢乙欣综合报导）2020年11月26日，
   <strong>
-   美国总统大选
+   <span href="https://www.secretchina.com/news/gb/tag/维权" target="_blank">
+    维权
+   </span>
   </strong>
-  只有5个星期的时候，两大政党的候选人举行了首场面对面辩论。
+  网报导，代理
+  <strong>
+   王藏
+  </strong>
+  案的北京
+  <strong>
+   人权
+  </strong>
+  律师
+  <strong>
+   张磊
+  </strong>
+  近日未能获得官方许可，亲自与王藏见面，只能够被看守所安排“电话会见”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  星期二（2020年9月29日）晚上，在俄亥俄州一所大学举行的一个半小时的辩论中，共和党候选人、现任总统
-  <strong>
-   特朗普
-  </strong>
-  与民主党候选人、前副总统
-  <strong>
-   拜登
-  </strong>
-  在任命最高法院大法官、健康保险、经济复苏、种族等国内事务上进行了激烈交锋。在如何应对
-  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
-   新冠病毒
+  维权网报导，北京人权律师张磊通报，当他要跟遭指控“煽动颠覆国家政权”的
+  <span href="https://www.secretchina.com/news/gb/tag/王藏" target="_blank">
+   王藏
   </span>
-  (又称中共病毒，COVID-19)问题上，两人集中提到了中国。
+  （本名：王玉文）会面，却没能见着。
  </p>
  <p>
-  拜登指责特朗普对疫情应对不力，造成美国多达20万人死于
-  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
-   新冠肺炎
+  <span href="https://www.secretchina.com/news/gb/tag/张磊" target="_blank">
+   张磊
   </span>
-  。
+  表示，11月23日下午，云南省楚雄市的看守所要求他提供当地的核酸检测报告后，依然拒绝安排他与王藏会面。
  </p>
  <p>
-  他指责特朗普在疫情突发早期没有尽力促使中国领导人
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  张磊说：“不顾我的强烈抗议，‘安排’我到看守所大门外自己找地方，进行‘电话会见’，而且全程监听。政治犯与刑事犯的相处，可以参阅索尔仁尼琴的名著《古拉格群岛》。之后去看望了王藏的妈妈和小孩，奶奶带着三个小孩在社区里玩耍，边上有不少‘保镖’。”
+ </p>
+ <p>
+  大纪元报导，11月13日，广东前律师杨斌以王藏的朋友、
+  <span href="https://www.secretchina.com/news/gb/tag/人权" target="_blank">
+   人权
   </span>
-  让美国的专家前往武汉调查疫情情况，反而感谢习对疫情的处理方式。拜登说：“我们坚持，我们在中国的人员应当能够前往武汉，自己来确定情况的危险程度。他没有要求习这么做。他告诉我们习做的多么棒。”
+  公益组织代表的身分，赴云南楚雄探望王藏的母亲，但却遭遇当地3名便衣的非法阻拦，随后甚至遭到双手反铐带走，手机也遭抢走，还被搜查，并进而遭警方关押近7小时。
  </p>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/特朗普" target="_blank">
-   特朗普
-  </span>
-  反驳说：“新冠疫情是中国的错，本不应该发生。” 他说，关于新冠死亡人数，人们根本不知道中国到底死了多少人。
- </p>
- <p>
-  特朗普还称，他在疫情早期宣布禁止来自中国的旅客入境，这项措施挽救了很多人的生命，如果换拜登来处理新冠疫情，可能将会有数百万人丧生。
+  杨斌告诉自由亚洲电台表示，“我坚持他们没有任何法定理由剥夺她（王藏母亲）的权利，这是最基本的人权。她要会见谁是不需要经过第三方批准的。我就打了110报警。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -91,7 +92,7 @@
   </div>
  </center>
  <p>
-  他面对拜登说：“如果看一下我们所做的。我关闭了（与中国的人员往来）。你说，这是排外和种族主义，因为你不会把国家关闭。你认为，我们不应该这样做，因为你觉得这很糟糕。你可能还会再让国家大门敞开两个月。因为我在早期这么做，事实上弗契医生说过，特朗普总统挽救了数以千计的生命。”
+  对此，旅美律师陈建刚说，在中国大陆，律师的执业环境持续恶化。公安部国保局等单位机构的权力大肆扩张，听命于国保的司法局，对律师、公民运动人士、维权上访公民等严格管控，并对其家人施行连坐处罚。一旦维权律师发声，就得面临遭到吊销执业证，或是遭到抓捕的危险，基本上已经是没有生存空间了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -106,7 +107,7 @@
   </div>
  </center>
  <p>
-  在为今年美国经济受到重挫作出辩护时，特朗普再次指责来自中国的病毒导致美国的经济活动不得不停顿。他说：“我们创造了历史上最好的经济。我们将其关闭是因为中国瘟疫。瘟疫进来了，我们将其关闭。这么做是非常艰难的，心理上非常难。”
+  2020年5月30日，警察当着王家老人及4名幼儿的面，将戴上手铐及黑头套的王藏从家中带走。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -121,7 +122,7 @@
   </div>
  </center>
  <p>
-  特朗普还在辩论中多次指责拜登的儿子亨特利用父亲的副总统职权从中国谋取了数以百万美元计的利益。拜登反驳说，这不是事实。
+  7月24日，王藏之妻王利芹也因替丈夫喊冤，而遭株连、被逮捕，她与王藏均被指控“煽动颠覆国家政权罪”、被批捕，双双被羁押在楚雄看守所中，并于9月中旬被移送至云南省楚雄州检察院审查起诉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -136,11 +137,7 @@
   </div>
  </center>
  <p>
-  在星期二美国首场主要总统侯选人辩论开始前，中共中央机关报《人民日报》以“
-  <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
-   美国大选
-  </span>
-  不应滥用‘中国问题’做戏”为标题发表评论，声言美国总统候选人不应当在其竞选过程中大谈中国问题。文章说，“中国作为一个独立自主国家，有权利维护自身的主权、安全和发展利益，不会牺牲自己的原则来配合美国竞选游戏。美国一些政客应该立即停止将中国拉入美国国内政治的把戏。”
+  楚雄警方日前告诉王藏，王利芹在看守所时因严重贫血，遭到送往看守所之外的医院就医。王藏据此推断，“王利芹正在遭受巨大的痛苦，而且身体状况肯定非常糟糕”，否则警方是不会告诉他这些事情的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -155,22 +152,7 @@
   </div>
  </center>
  <p>
-  特朗普和拜登答应在11月3日总统大选前一共进行三场辩论。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在星期二首场辩论的最后，主持人问两位候选人，当选票还在统计当中，你会敦促你的支持者保持冷静吗？在选举结果得到独立机构的核准前，你保证不会宣布自己当选吗？
+  王藏又进一步表示，在王利芹没有获得自由之前，他是不会再跟楚雄当局做任何谈判。自己的案件并无隐私，更没有涉及所谓的“国家安全”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -189,7 +171,7 @@
   </ins>
  </center>
  <p>
-  特朗普回答说：“如果这是一场公平的选举，我百分之百答应这么做，但是如果我看到数以万计的选票被人操纵的话，我不会答应。”
+  王藏还透露，两名代理律师张磊及卢思位于9月17日首次与他会见后，看守所的管教希望王藏能更换律师。不过，王藏表示，自己绝对不会解聘这两名律师，因为他完全相信两名律师的职业素养及人品，他还特地要求并授权律师能够将他的所有的情况毫无保留地立刻告知公众。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -204,7 +186,7 @@
   </div>
  </center>
  <p>
-  拜登回答说：“我会接受选举结果，他也会。因为，在所有选票获得统计后，一旦胜选者被公布，那就是终点。如果胜选者是我，那很好，如果不是我，我会支持选举结果。”
+  至于他们的亲属，例如王藏之弟王玉斌、王利芹之妹王晓敏等人都纷纷遭到株连，除了被警方骚扰，还遭到软禁，而王藏的母亲在遭到强迫签署放弃会见律师与他人的保证书后，就被严格监视，不准踏出家门。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -219,7 +201,7 @@
   </div>
  </center>
  <p>
-  美国股票指数期货在整个辩论期间原本呈上升趋势，在最后一个问题回答完毕之后，标准普尔500期货在一个小时内下跌了近1.5%。
+  10月16日，卢思位在楚雄市看守所会见了王藏。已经遭到当局关押近5个月的王藏，随后通过律师公开发布他的近况，并要求当局即刻释放遭到关押的妻子王利芹。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,21 +216,7 @@
   </div>
  </center>
  <p>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  （原标题：美总统大选主要候选人首次同台辩论 激辩新冠疫情时集中提及中国）
+  此外，王藏之所以被指控“煽动颠覆国家政权罪”，基本上是与他在2015年那一次遭到抓捕出来之后所公开的言论、接受的采访、行为艺术、书写的诗歌文章有关系。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -280,7 +248,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -312,13 +280,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947843.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947843.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947843.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/01/947843.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953855.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953855.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953855.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/953855.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947843.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/953855.md' width='0px' height='0px'/>
