--- a/pages/nsc412/n12576905.md
+++ b/pages/nsc412/n12576905.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·26】乔州紧急动议被获准" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
+<div><img alt="【大选更新11·26】乔州紧急审查动议获准" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
 <div class="caption">
- 2020年11月19日，西德尼·鲍威尔（Sidney Powell）律师在华盛顿特区共和党全国委员会总部的新闻发布会上发表讲话。(MANDEL NGAN/AFP via Getty Images)
+ 美国第十一巡回上诉法院周三（11月25日）批准了林伍德（Lin Wood）律师的紧急动议。图为林伍德律师（左）资料照。(Thomas Cooper/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
