同步于: 11月27日2时52分

--- a/pages/p1/953819.md
+++ b/pages/p1/953819.md
@@ -1,4 +1,4 @@
-### 李子柒月饼火了？律师：涉嫌违法(组图)
+### 中国器官贩卖黑市内幕曝光 网热议更大黑幕(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="李子柒 月饼 " src="https://img3.secretchina.com/pic/2020/10-2/p2787441a453035160-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="中国器官移植内幕（图片来源：PIERRE-PHILIPPE MARCOU/AFP/Getty Images）" src="https://img2.secretchina.com/pic/2019/9-28/p2527412a978291137-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   李子柒（图片来源：维基百科）
+   中国器官移植内幕（图片来源：PIERRE-PHILIPPE MARCOU/AFP/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,33 +21,25 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月2日讯】（看中国记者黎小葵综合报导）今年中秋节网红
+  【看中国2020年11月26日讯】（看中国记者文俪综合报导）近日，社交网络推特上热传一段揭露中国
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/李子柒" target="_blank">
-    李子柒
+   <span href="https://www.secretchina.com/news/gb/tag/人体器官" target="_blank">
+    人体器官
    </span>
   </strong>
-  推出了自家品牌
+  买卖
   <strong>
-   月饼
+   黑市
   </strong>
-  ，然而，日前有律师指出，李子柒品牌的月饼礼盒
-  <strong>
-   设计
-  </strong>
-  ，涉嫌违反《
-  <strong>
-   广告法
-  </strong>
-  》。
+  内幕的影片。其中提到2万元收购的肾脏，卖出则是20多万元（人民币）甚至30至50万元不等，再度引起网络上的热议。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -55,32 +47,37 @@
  </p>
  <p>
   <strong>
-   李子柒品牌
-   <span href="https://www.secretchina.com/news/gb/tag/月饼" target="_blank">
-    月饼
+   器官贩卖
+   <span href="https://www.secretchina.com/news/gb/tag/黑市" target="_blank">
+    黑市
    </span>
-   或涉嫌违法
+   内幕曝光 网友热议
   </strong>
  </p>
  <p>
-  今年中秋节前夕，一款“李子柒我爱北京天安门月饼礼盒”在商超门市及大型网购平台均有代售，价格从298元人民币至894元一盒不等。该品牌礼盒内外都印有天安门的图案。其中内部有4层纸质镂空
-  <span href="https://www.secretchina.com/news/gb/tag/设计" target="_blank">
-   设计
+  11月25日，有网友在海外社交平台推特上传一段揭露
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  摆设，正中间是天安门广场，两侧亦有天坛、国家体育场等地标。
+  人体器官买卖黑市内幕的影片。
  </p>
- <p>
-  此外，礼盒中每一个月饼都是独立包装，封面上亦有各种中式元素，包括华表、腾龙、祥狮等图案。
- </p>
- <p>
-  “上游新闻”引述湖南闻胜律师事务所知识产权与娱乐法律师刘凯的话指出，李子柒品牌月饼使用的这些元素，已经涉嫌违反《
-  <span href="https://www.secretchina.com/news/gb/tag/广告法" target="_blank">
-   广告法
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   医德没了，医院没规则了，法律成了废纸。就成这样了。
+   <span href="https://t.co/I8cSIOXjpE">
+    pic.twitter.com/I8cSIOXjpE
+   </span>
+  </p>
+  — 吴文行wenxingwu (@wuwenhang)
+  <span href="https://twitter.com/wuwenhang/status/1331588905334943747?ref_src=twsrc%5Etfw">
+   November 25, 2020
   </span>
-  》第九条的规定，因为天安门等图案不能随便使用。
+ </blockquote>
+ <p>
+  这是一段截取自中国广东经济科教频道的一段视频，视频中说道，每个贩肾团伙给卖肾者的费用不是一致的。例如：山西临汾被强迫卖肾的小伙子胡杰透露，器官贩子曾承诺以4万元（人民币）购取他的一颗肾脏，但在肾脏被摘取后的第三天，他的银行卡中只收到2万7千元（人民币）。
  </p>
  <p>
-  报导还指导，像李子柒这种类似包装和装潢触碰“红线”的商家，过去也有不少且最终受到处罚。
+  一位在杭州卖肾窝点的卧底透露：杭州的卖肾链条甚至还制定了全国统一价。卖肾者卖掉一颗肾的价格大约是3.5万元（人民币）左右。而相对于卖肾者通过卖肾获得的收入，买家要付出高近十倍的代价。例如上述提到的贩肾团伙以2万元的价格收购的肾脏，转到买肾者手里则每次要付二十几万元。此外，卧底还透露说，贩肾团伙向购肾者收取的费用甚至达三十至五十万元不等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +92,7 @@
   </div>
  </center>
  <p>
-  例如，2015年10月，由于三亚市一家酒吧门口能看到“天安门城楼”、“华表”等，而遭到三亚市工商局处罚；2018年12月，有商人为了推销其经营的辰砂商品，在凤凰县辰砂银缘工艺品店外墙打出以“天安门、华表”为背景图案的广告，结果遭到处罚。
+  而这则相关的贴文，也引发许多网友的热议，有网友说“触目惊心人体器官当做商品被交易一个自上而下的利益链条”；也有的网友回复，“那个‘当局’就是幕后黑手”；甚至有网友贴出一段调查报告纪录片《铁证如山》，并且表示这个纪录片是“人体器官产业里更不能公开的部份揭露出一小角”而已。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,7 +107,26 @@
   </div>
  </center>
  <p>
-  不过，值得一提是，对于此次李子柒品牌月饼礼盒涉嫌违反《广告法》的指控，李子柒官方微博于10月1日发出声明，指有关产品的完整包装已申请著作权，由北京天安门旅游文化发展有限公司享有权利，月饼的包装设计也经过相关部门审核确认。而官方尚未就李子柒品牌月饼礼盒设计一事，作出回应。
+  而此则贴文底下的网友回复，除了让人惊觉中国
+  <span href="https://www.secretchina.com/news/gb/tag/器官移植" target="_blank">
+   器官移植
+  </span>
+  早已产业化之外，更让人想起长期被国际社会质疑的中共有系统地大量活摘器官贩卖牟利的行径。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  来自新疆的英国维吾尔协会负责人、肿瘤外科医师安华托帝‧博格达就曾表示，中国器官移植已产业化；来源不明的器官，暗藏巨大利润。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +142,7 @@
  </center>
  <p>
   <strong>
-   李子柒突然爆红 粉丝惊人
+   中共器官移植来源不明 最大宗来源指向良心犯
   </strong>
  </p>
  <center>
@@ -142,7 +158,7 @@
   </div>
  </center>
  <p>
-  公开资料显示，李子柒1990年出生于四川绵阳，6岁时父亲去世，之后与祖父母生活。 14岁时迫于生计，她辍学进城打工，做过各种工作。 20岁时，因祖母病重辞职回乡。为了生活，她摆过地摊，开过淘宝店，但却都已失败告终。为了网店流量，2016年她开始制做古风美食视频，意外爆红，在短短一年内吸粉无数。到2017年，她的一段视频能有超过千万次播放量，微博话题阅读量过亿。
+  而安华托帝医师所称的来源不明的器官，又是意味着什么？器官贩卖黑市或许只是冰山一角。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,7 +173,7 @@
   </div>
  </center>
  <p>
-  李子柒曾在“2017美食V影响力峯会”上获得微博美食十大影响力博主的荣誉，接着在微博超级红人节颁奖典礼上，被评为2018微博年度最具商业价值红人。
+  虽然中共当局曾于2019年10月份宣称中国器官移植及捐赠数量位居世界第2位，技术也居世界前列。但根据关注中国人权问题的《寒冬》杂志曾于2019年8月从研究中共强摘人体器官暴行的专家李挥戈博士处证实，中国器官移植手术的器官来源非常可疑。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,7 +188,37 @@
   </div>
  </center>
  <p>
-  目前，她在微博拥有2690万粉丝，在YouTube拥有1260万粉丝。她视频的粉丝来自台湾、伊朗、美国、俄罗斯、菲律宾及巴西等地。
+  李挥戈博士表示，在2017年美国肾脏移植平均等待时间为3.6年，但在中国仅需十几天就可以找到适合患者的器官供体，实在令人震惊。而按照“中国人体器官捐献管理中心”官方网站提供的数据，截止到2019年10月前，志愿登记人数为1533717人，这一数字与美国2018年登记在册的18岁以上的器官自愿捐献者1.45亿人相差很多。因此可见中国自愿捐献器官的人数远低于美国。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  安华托帝‧博格达也指出，中国器官捐献与死囚器官数量，远比不上移植数量；法轮功、维族等团体，都成为中共强摘器官受害群体。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此外，2017年11月15日，由韩国最大日报社《朝鲜日报》旗下的电视台“TV朝鲜”，播放了该台节目组制作的记录片《调查报告7》。该片以“杀了才能活”为题，揭露了自2000年以来约有两万名韩国患者去中国接受了器官移植手术，而所移植的器官大多数是来自中国的良心犯，特别是从法轮功修炼者身上强摘器官。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,25 +237,9 @@
   </ins>
  </center>
  <p>
-  翻查过往记录发现：2016年4月11日，李子柒在微博发布第一个视频；2016年6月20日，李子柒的微博视频中，第一次出现“李子柒”的logo； 2017年7月20日，四川子柒文化传播有限公司成立，注册地是四川省绵阳市涪城区。法定代表人：李佳佳。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="李子柒" src="https://img3.secretchina.com/pic/2019/12-11/p2580341a51913993-ss.jpg"/>
-  <br>
-   四川子柒文化传播有限公司法定代表人：李佳佳。（图片来源：网络截图）
-  </br>
+  <strong>
+   中共强摘器官牟取暴利 甚至按需杀人
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,7 +254,7 @@
   </div>
  </center>
  <p>
-  从四川子柒文化传播有限公司名称及注册地来看，推测李佳佳可能就是李子柒。 2017年8月17日，四川子柒文化传播有限公司注册“子柒文化”，而后经过两次改名，最终在微信公众号上成功认证“李子柒”商标。
+  而且根据《追查迫害法轮功国际组织》长期调查指出，中国存在庞大的活人器官供体库，这些主体来源涉嫌是数百万被非法抓捕的上访法轮功学员；其中，全国军、警、司法、地方医疗皆参与活摘器官的运作。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,7 +269,7 @@
   </div>
  </center>
  <p>
-  其后，子柒文化在织物及其纺织品，服、装、鞋、帽，鱼肉、果冻、果酱等多项商品分类下注册“李子柒”、“子柒”、“柒”等商标近百项，打造李子柒个人商标。
+  2019年6月，调查中共强摘良心犯器官的英国独立人民法庭在伦敦公布的调查结果也指出，过去多年来，中共当局一直在全国范围内大规模强摘器官。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -254,7 +284,37 @@
   </div>
  </center>
  <p>
-  而上述李子柒官方提及的“北京天安门旅游文化发展有限公司”成立于2013年3月18日，北京市天安门旅游服务集团为100%持股股东。北京市天安门旅游服务集团在工商资料中未显示股东信息。
+  该法庭的调查结果也提到，中国器官移植等待时间极短，所进行的移植手术数量远远超过政府和医院公布的自愿捐献器官的数据。该法庭判定，中国政府犯有摘取无辜民众器官的罪行。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “人民法庭”声明说，强摘器官的指控于2001年首次曝光，那时在中国出现大量器官移植手术，等待器官的时间变得异常短暂。中国医院的网站宣传称，心，肺和肾这些器官可以提前预订，这表明受害者是在按需被杀害的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  荷兰全国性报纸《忠诚报》（Trouw）于2019年10月4日刊登报道，认为独立法庭的调查结果“非常硬实”：“中共为了摘除活人器官杀人，人依然还活着的时候被强摘器官。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -286,7 +346,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -318,13 +378,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947936.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947936.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947936.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/02/947936.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953819.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953819.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/953819.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/27/953819.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947936.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/953819.md' width='0px' height='0px'/>
