同步于: 11月27日7时3分

--- a/pages/soh6/447214.md
+++ b/pages/soh6/447214.md
@@ -23,7 +23,7 @@
   <ok href="/term/82935">
    鲍威尔
   </ok>
-  （Sidney Powell）及其团队正式向乔州亚州和密歇根州法院递交了重磅诉状。其中，乔州的诉状长104页，密州的诉状也有至少75页，里面列举了海量实锤
+  （Sidney Powell）及其团队正式向乔治亚州和密歇根州法院递交了重磅诉状。其中，乔州的诉状长104页，密州的诉状也有至少75页，里面列举了海量实锤
   <ok href="/term/13015">
    选举舞弊
   </ok>
@@ -37,7 +37,7 @@
   <ok href="/term/82935">
    鲍威尔
   </ok>
-  在日前接受《福克斯》新闻节目采访时已明确表示，本次大选舞弊系统的背后有中共的资金，“外国势力操纵大选的证据是压倒性的”。她誓言将代表美国人民“寻求真相”，“我们不会允许这个伟大国家的基石被吃赤裸裸的欺诈所破坏。”
+  在日前接受《福克斯》新闻节目采访时已明确表示，本次大选舞弊系统的背后有中共的资金，“外国势力操纵大选的证据是压倒性的”。她誓言将代表美国人民“寻求真相”，“我们不会允许这个伟大国家的基石被赤裸裸的欺诈所破坏。”
  </p>
  <p>
   11月25日中午，宾州参议院首次
@@ -85,7 +85,7 @@
   律师递交了重磅诉讼，诉状长104页，列举了数量众多的乔州大选舞弊重磅证据。
  </p>
  <p>
-  2、林伍德律师在乔州地方法院递交的推迟该州投票认证的诉状被驳回，于是他向上诉法院提出提紧急动议，要求其对下级法院的裁决进行紧急审查。11月25日，第十一巡回上诉法院批准了林伍德律师的紧急动议。
+  2、林伍德律师在乔州地方法院递交的推迟该州投票认证的诉状被驳回，于是他向上诉法院提出紧急动议，要求其对下级法院的裁决进行紧急审查。11月25日，第十一巡回上诉法院批准了林伍德律师的紧急动议。
  </p>
  <p>
   3、全国保守派法律团体托马斯·莫尔协会（Thomas More Society）的“阿米斯塔德项目”（Amistad Project）在乔州提出诉讼，指控该州可能存在高达20万张违规选票，足以翻转选举结果。
@@ -155,6 +155,33 @@
  <h1>
   &lt;各州大选舞弊证据及各方行动&gt;
  </h1>
+ <h3>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  发推：拜登绝不可能得到8千万选票
+ </h3>
+ <p>
+  截至11月26日，美国大选投票结果显示，拜登获得了超过8千万张选票。
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统发推文质疑该数据，说这个选举百分之百被操纵了，这是绝不可能的。
+ </p>
+ <p>
+  <ok href="/term/1041">
+   川普
+  </ok>
+  说：“刚看到投票表。拜登绝不可能获得80,000,000票！！！这是一次100％被操纵的选举！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
  <h3>
   提重磅
   <ok href="/term/13015">
