--- a/pages/p2/953897.md
+++ b/pages/p2/953897.md
@@ -1,4 +1,4 @@
-### 见证中共邪恶政权各种谎言 宋庆龄悔不当初(图)
+### 广东梅州连续3任市委书记落马 其大秘自缢身亡(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋庆龄与毛泽东和邓小平在苏联莫斯科。" src="https://img3.secretchina.com/pic/2020/11-18/p2820632a427062478-ss.jpg"/>
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-27/p2826601a264305510-ss.jpg"/>
   <br>
-   见证中共独裁政权各种谎言，宋庆龄悔不当初。图为宋庆龄与毛泽东和邓小平在苏联莫斯科。（图片来源：公有领域）
+   广东省委统战部原副部长黄强被双开。（图片来源：网络）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,46 +29,48 @@
   </div>
  </div>
  <p>
-  1949年，
-  <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
-   蒋介石
-  </span>
-  和宋家姐妹轮番劝
+  【看中国2020年11月27日讯】（看中国记者苗薇综合报导）半年前落马的广东省委统战部原副部长
   <strong>
-   宋庆龄
+   <span href="https://www.secretchina.com/news/gb/tag/黄强" target="_blank">
+    黄强
+   </span>
   </strong>
-  离开大陆，宋拒绝了，留下了与推翻丈夫政权的人合作，匪夷所思，除了开始那几年的尊重，宋更多的是被冷落，被当做政治花瓶点缀，宋见证了这个独裁政权的各种谎言与荒诞，心中的苦闷是不能言说的。1994年11月，
+  近日被开除中共党籍与公职（双开）。黄强是第三任落马的中共广东省
   <strong>
-   中共
+   梅州市
   </strong>
-  书记处审查通过了党史编委会整理的关于宋庆龄1949年后32年经历的材料。
+  委前书记，他们共同的“大秘”彭耀新2018年已自缢身亡。近年来，
+  <strong>
+   梅州官场
+  </strong>
+  腐败窝案频发，多位梅州官员被指涉及贪腐、拉帮结派、内斗等。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  这份材料的内容提要如下：
+  据陆媒报导，11月26日，中纪委官网网站称，中共广东省委统战部前副部长黄强被立案审查调查，并被通报开除中共党籍，开除公职（双开）；将其涉嫌犯罪问题移送检察机关起诉。
  </p>
  <p>
-  1955年11月，宋给毛写信：“我很不理解提出对工商业的改造，
-  <span href="https://www.secretchina.com/news/gb/tag/共产党" target="_blank">
-   共产党
+  通报称，经查，黄强超计划生育；违规收受礼金；甘于被“围猎”，大搞权钱交易，在企业经营、工程承揽、职务晋升等方面为他人谋取利益，并非法收受巨额财物等。
+ </p>
+ <p>
+  现年59岁的黄强，广东廉江人，一直在广东工作，仕途历经湛江、阳江、云浮、
+  <span href="https://www.secretchina.com/news/gb/tag/梅州" target="_blank">
+   梅州
   </span>
-  曾向工商界许下长期共存、保护工商业者利益的诺言。这样一来，不是变成自食其言了吗？资本家已经对共产党的政策产生了怀疑和恐惧，不少人后悔和抱怨。”毛批示：“宋副委员长有意见，要代表资本家讲话。”
+  等地。2008年出任云浮市市长，三年后，于2011年任云浮市委书记；2014年8月调任梅州市委书记；2016年7月调任广东省委统战部副部长。2020年4月被免职，2020年5月被调查。
  </p>
  <p>
-  1957年宋又
-  <span href="https://www.secretchina.com/news/gb/tag/写信" target="_blank">
-   写信
+  梅州市已经有三任市委书记陆续被查，即
+  <span href="https://zh.wikipedia.org/wiki/%E6%9D%8E%E5%98%89_(%E6%94%BF%E6%B2%BB%E4%BA%BA%E7%89%A9)">
+   李嘉
   </span>
-  给党中央：“党中央号召大鸣大放，怎么又收了？共产党不怕国民党八百万大军，不怕美帝国主义，怎么会担心人民推翻党的领导和人民政府？共产党要敢于接受各界人士的批评，批评人士大多是爱国、爱党的，一些民主党派人士为新中国的解放，作出了家庭、个人名利的牺牲，一些二、三十岁的青年知识分 子怎么可能一天就变成反党反社会主义分子？我很不理解这个运动，我想了两个多月，还是想不通，有这么多党内党外纯粹的人会站在共产党和人民政府的对立面？要推翻共产党？”
+  、朱泽君和黄强。
  </p>
  <p>
-  从1958年起，宋曾推病拒绝参加人大常委会。党中央委派刘少奇、周恩来、董必武去做工作，宋只得继续参加。1959年4月，宋在人大被推举为国家副主席。宋先后两次推辞：“我是落伍了，思想跟不上，才挂个名，作个样子，对国家不利。”提议由李富春或乌兰夫担任。
- </p>
- <p>
-  宋任国家副主席，是刘少奇、董必武、林伯渠、李富春提议的，政治局讨论时，21人中18人赞成，3人反对，反对者是：毛、林彪、康生。当时毛发言：“宋是我们民主革命时期的同路人，在社会主义革命时期，她和我们就走不到一起了。从不赞成我们的方针路线到反对我们的方针路线。我们同她是不同的阶级。”
+  在黄强之前担任梅州市委书记的是朱泽君。朱泽君曾任梅州市市长、委书记，2015年朱泽君在广东省工商行政管理局党组书记、局长任上被查，他被指“与多名女性进行权色交易”等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +85,11 @@
   </div>
  </center>
  <p>
-  文革期间，宋先后给毛和党中央写了七封信，表达了她对“文革”的不理解、反感，并对共产党极度失望。1967年8月、1969年11月、1976年6月，宋曾三次产生厌世思想，在信中以及对来探望她的领导人的谈话中流露出对自己所选择的道路感到怅惘和说不出的苦闷。
+  2012年2月，朱泽君接替
+  <span href="https://www.secretchina.com/news/gb/tag/李嘉" target="_blank">
+   李嘉
+  </span>
+  担任梅州市委书记。李嘉和朱泽君不仅是前后任，还曾在梅州“撘班子”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +104,7 @@
   </div>
  </center>
  <p>
-  七封信中说：“我不懂文化，说小说都是政治，而且都是毒草，我糊涂了，一夜天下来，一些和我一起工作的同事都变成了走资派、反党集团、野心家、牛鬼蛇神。中央要我学习批判揭发刘少奇，我不会作的，刘少奇主席在党中央工作了三、四十年，今天会是叛徒、内奸！我不相信，一个叛徒内奸当了七年的国家主席，现在宪法还有效吗？怎么可以乱抓人、乱斗人、逼死人？党中央要出来讲话。这种无法无天的情况，自己伤害自己的同志、人民，是罪行。我们的优秀干部从与国民党的战斗中走过来，却死在自己的队伍中，这是什么原因？”
+  李嘉生于1964年9月，2003年李嘉调任梅州市委副书记，先后兼任市委组织部部长、市政府副市长，2007年出任梅州市市长。2010年7月，李嘉任梅州市委书记。同月，时任广州增城市委书记的朱泽君调任梅州市委副书记、代市长，次年1月转正，两人“撘班子”共事2年。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,7 +119,7 @@
   </div>
  </center>
  <p>
-  1970年3月，毛对周恩来说：“她不愿意看到今天的变化，可以到海峡对岸，可以去香港、去外国，我不挽留。”并指示周恩来、李先念把他的话传达给宋。传达时他们说：“主席很关心你，知道你的心情不怎么好，建议你到外面散散心，休息休息。”宋说：“是否嫌我还在？我的一生还是要在这块土地上，走完最后几步。”于是宋推病拒绝出席一些节日活动和招待会，说：“我参加会伤感，还是不参加，参加一次，回来就要进医院。另外，我也不想做政治上的点缀。”
+  2015年8月，朱泽君落马。7个月后，2016年3月23日，已经官居广东省委常委、珠海市委书记的李嘉也被查。李嘉被指控受贿2058万元人民币。2018年1月，被判处有期徒刑13年。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,7 +134,37 @@
   </div>
  </center>
  <p>
-  1980年11月，宋给党中央写了她一生中最后的一封信：“一、国家要振兴，恢复元气，这是一次大好时机。二、要总结建国以来政治运动对国家对人民造成的创伤。三、请不要把我和国父放在一起，我不够格的。”
+  据报导，近年来已有多位曾在梅州任职的官员被查或获刑，梅州市委以时任市委书记李嘉为代表的同一届常委班子，至今已有7人落马、1人自缢身亡。其中包括李嘉、朱泽君、李纯德、林碧红、叶胜坤、周章新、黄伟闻先后被查。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而上述三名相继落马的梅州市委书记共同的“大秘”彭耀新于2018年8月自缢身亡。他于2008年8月开始任梅州市委秘书长，直到2016年11月升任梅州市委副书记、政法委书记。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，黄强的前上司、广东省委前常委、统战部前部长曾志权，2018年7月11日落马，2019年1月4日被双开，2020年4月一审开庭，被指控受贿1.4亿元人民币，平均每年受贿1千万元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,13 +228,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/904686.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/26/904686.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953897.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953897.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/953897.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/27/953897.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/904686.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/953897.md' width='0px' height='0px'/>
